--- a/Sims/UserWindow.xaml
+++ b/Sims/UserWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MyFirstWpfApp.UserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="User Panel" Height="450" Width="600"
+        Title="User Panel" Height="618" Width="1111"
         WindowStartupLocation="CenterScreen">
 
     <Grid Margin="20">
@@ -23,24 +23,39 @@
             <Button Content="&lt;&lt; Remove &lt;&lt;" Width="90" Height="30" Click="RemoveFromPlaylist_Click"/>
         </StackPanel>
 
-        <!-- Playlist -->
+        <!-- Playlists Column -->
         <StackPanel Grid.Column="2">
+            <!-- Playlist Controls -->
             <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                <ComboBox x:Name="PlaylistSelector" Width="134" Margin="0,0,10,0"
+                          SelectionChanged="PlaylistSelector_SelectionChanged"/>
                 <TextBox x:Name="PlaylistNameBox"
-                         Text="My Playlist"
                          Width="134"
                          Margin="0,0,10,0"/>
                 <Button Content="Rename"
                         Width="80"
                         Click="RenamePlaylist_Click"/>
+                <Button Content="New"
+                        Width="60"
+                        Margin="5,0,0,0"
+                        Click="NewPlaylist_Click"/>
             </StackPanel>
-            <ListBox x:Name="PlaylistList" Height="300" DisplayMemberPath="Title" SelectionMode="Extended"/>
+
+            <!-- Playlist Songs List -->
+            <ListBox x:Name="PlaylistList"
+                     Height="300"
+                     DisplayMemberPath="Title"
+                     SelectionMode="Extended"/>
         </StackPanel>
-        
-    
 
         <!-- Logout -->
-        <Button Content="Logout" Width="80" Height="30" HorizontalAlignment="Center"
-                VerticalAlignment="Top" Margin="0,294,0,0" Click="Logout_Click" Grid.Column="1"/>
+        <Button Content="Logout"
+                Width="80"
+                Height="30"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                Margin="0,10,0,0"
+                Click="Logout_Click"
+                Grid.Column="1"/>
     </Grid>
 </Window>
