--- a/Sims/AdminWindow.xaml
+++ b/Sims/AdminWindow.xaml
@@ -11,13 +11,30 @@
         </Grid.RowDefinitions>
 
         <!-- Song list -->
-        <ListBox x:Name="SongsList" DisplayMemberPath="Title" SelectionMode="Single" SelectionChanged="SongsList_SelectionChanged"/>
+        <ListBox x:Name="SongsList" DisplayMemberPath="Title" SelectionMode="Single" SelectionChanged="SongsList_SelectionChanged" Margin="0,0,152,0">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Opacity" Value="1"/>
+                    <!-- default fully visible -->
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding IsAssigned}" Value="True">
+                            <Setter Property="Opacity" Value="0.5"/>
+                            <!-- gray out if assigned -->
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+
+        <!-- Display grade and comment -->
+        <TextBlock x:Name="SelectedGrade" Margin="408,0,0,319" FontWeight="Bold"/>
+        <TextBlock x:Name="SelectedComment" Margin="408,48,0,0" TextWrapping="Wrap"/>
 
         <!-- Assign controls -->
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <TextBlock Text="Assign to: " VerticalAlignment="Center" Margin="0,0,5,0"/>
             <ComboBox x:Name="EditorComboBox" Width="180" Margin="0,0,10,0"/>
-            <Button Content="Assign" Width="80" Click="AssignSong_Click"/>
+            <Button x:Name="AssignButton" Content="Assign" Width="80" Click="AssignSong_Click"/>
             <Button Content="Logout" Width="80" Margin="10,0,0,0" Click="Logout_Click"/>
         </StackPanel>
     </Grid>
