--- a/Sims/UserWindow.xaml
+++ b/Sims/UserWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MyFirstWpfApp.UserWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="User Panel" Height="618" Width="1111"
+        Title="User Panel" Height="617" Width="1197"
         WindowStartupLocation="CenterScreen">
 
     <Grid Margin="20">
@@ -14,7 +14,7 @@
         <!-- All Songs -->
         <StackPanel Grid.Column="0">
             <TextBlock Text="All Songs" FontWeight="Bold" FontSize="16" Margin="0,0,0,5"/>
-            <ListBox x:Name="AllSongsList" Height="300" DisplayMemberPath="Title" SelectionMode="Extended"/>
+            <ListBox x:Name="AllSongsList" Height="331" DisplayMemberPath="Title" SelectionMode="Extended"/>
         </StackPanel>
 
         <!-- Add / Remove Buttons -->
@@ -39,11 +39,13 @@
                         Width="60"
                         Margin="5,0,0,0"
                         Click="NewPlaylist_Click"/>
+                <!-- Delete Playlist button -->
+                <Button Content="Delete" Width="60" Margin="5,0,0,0" Click="DeletePlaylist_Click"/>
             </StackPanel>
 
             <!-- Playlist Songs List -->
             <ListBox x:Name="PlaylistList"
-                     Height="300"
+                     Height="319"
                      DisplayMemberPath="Title"
                      SelectionMode="Extended"/>
         </StackPanel>
