--- a/Sims/AdminWindow.xaml
+++ b/Sims/AdminWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyFirstWpfApp.AdminWindow"
+﻿<Window x:Class="Sims.AdminWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Admin Panel" Height="450" Width="600"
