--- a/Sims/MainWindow.xaml
+++ b/Sims/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyFirstWpfApp.MainWindow"
+﻿<Window x:Class="Sims.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Login" Height="325" Width="483"
